--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,6 @@
 name: Build and Deploy
 
-#add your main branch to build
+#add your main branch to build and run
 on:
   push:
     branches: [ main ]
