--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,6 +22,7 @@ jobs:
       run: npm run build
 
     - name: Deploy to GitHub Pages
+      working-directory: my-web-app
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
