--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,6 +9,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: my-web-app
+
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v4
@@ -22,7 +26,6 @@ jobs:
       run: npm run build
 
     - name: Deploy to GitHub Pages
-      working-directory: my-web-app
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
